--- a/app/src/main/res/drawable/back_ground1.xml
+++ b/app/src/main/res/drawable/back_ground1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-        android:src="@drawable/image1"
+        android:src="@drawable/mainpage"
         android:tileMode="disabled"
         android:gravity="fill"
         android:adjustViewBounds="true"
