--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="background_color">#FFDEAD</color>
+    <color name="colorPrimary">#6200EE</color>   <!-- Example: Purple 500 -->
+    <color name="colorPrimaryDark">#3700B3</color> <!-- Example: Purple 700 -->
+    <color name="colorAccent">#03DAC5</color>     <!-- Example: Teal 200 -->
+    <!-- Your existing custom color -->
 </resources>
